vX.Y.X

- Fix use of ignore file for podman use
- Allow user to specify container engine
- Add some C directives to support building on older C tool chains, in
  particular CentOS 7

v0.48.7

- Fix white space trimming of scale factor in report generator

v0.48.6

- Fix calculation of ramp up time when processing multiple mix files
- Fix driver3 ramp up and stop time calculations
- Fix use of ignore file for container use

v0.48.5

- Increase the buffer size of sname to accommodate hostnames longer than 64
  characters
- Change how throughput, duration, unknown errors, and ramp up time is
  displayed
- Add scale factor and database version to report
- Stop checking known hosts for ease of testing in run-workload script
- Update container scripts to prefer podman
- Add instructions on how to use podman to test scripts
- Use Fedora instead of Debian in container scripts
- Fix calculation of driver rampup time when using driver3

v0.48.4

- Fix some scripting bugs in collecting PostgreSQL database stats
- Stop throwing errors from missing docutils or pandoc in report generation

v0.48.3

- Create detailed-summary.rst in the results directory instead of current path

v0.48.2

- Add separate CockroackDB load-db script
- Fix setting the database port for PostgreSQL and MySQL in the driver3
- Update Docker scripts to support CockroachDB
- Update CockroackDB load-db script to be single stream and have an adjustable
  rate on how many warehouses to load before committing
- Add separate YugabyteDB load-db script to be single stream and have an
  adjustable rate on how many warehouses to load before committing
- Update Docker scripts to support YugabyteDB
- Fix libpq debug printing of time stamps

v0.48.1

- Update PostgreSQL report script
- Update Docker helper scripts to use Makefile.cmake
- Update run-workload with -F flag to control number of database connections
  per processor for driver3
- Update post-process script to take a list of mix files to process