@@ -1,0 +1,43 @@
+#!/bin/sh
+
+usage() {
+	# Note that $0 return AppRun, as opposed to the AppImage filename.
+	cat << EOF
+dbt2 is Database Test 2 (DBT-2) wrapped up in an AppImage.
+
+Usage:
+  dbt2 COMMAND [OPTION]
+
+Options:
+  The OPTION choices are depdent on the COMMAND specified.  The -h flag will
+  display the available options.
+
+Commands:
+$(find "${APPDIR}/usr/bin" -maxdepth 1 -type f -name "dbt2-*" -printf "%f\n" | sed -e "s/dbt2-/  /")
+
+Database Test 2 (DBT-2) project page: https://github.com/osdldbt/dbt2
+EOF
+}
+
+if [ $# -eq 0 ]; then
+	usage
+	exit 0
+fi
+
+export LD_LIBRARY_PATH="${APPDIR}/usr/lib:${LD_LIBRARY_PATH}"
+export PATH="${APPDIR}/usr/bin:${PATH}"
+
+if [ "$PGHOST" = "" ]; then
+	export PGHOST="/tmp,/var/run/postgresql"
+fi
+
+COMMAND="${APPDIR}/usr/bin/dbt2-${1}"
+
+if [ ! -f "$COMMAND" ]; then
+	echo "COMMAND '$1' not found, run 'dbt2' without arguments for usage."
+	exit 1
+fi
+
+shift
+
+$COMMAND "$@"
