@@ -1,0 +1,19 @@
+AppImages are only for Linux based systems:
+
+    https://appimage.org/
+
+The AppImageKit AppImage can be downloaded from:
+
+    https://github.com/AppImage/AppImageKit/releases
+
+It is recommended to build AppImages on older distributions:
+
+    https://docs.appimage.org/introduction/concepts.html#build-on-old-systems-run-on-newer-systems
+
+At the time of this document, CentOS 7 is the one of the oldest supported Linux
+distributions with the oldest libc version.
+
+The logo used is the number "2" from the Freeware Metal On Metal Font.
+
+See separate README-APPIMAGE-* files for specific limitations when using the
+building and using the AppImage with a specific database management system.
